--- a/favouriteprovider/src/main/AndroidManifest.xml
+++ b/favouriteprovider/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     
     <uses-permission android:name="com.lab.tesyant.moviebadass.READ_DATABASE"/>
     <uses-permission android:name="com.lab.tesyant.moviebadass.WRITE_DATABASE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
