set widget view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,15 @@
 
         <activity android:name=".FavouriteActivity" />
 
+        <receiver android:name=".FavouriteAf">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favourite_af_info" />
+        </receiver>
     </application>
 
 </manifest>
