--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity android:name=".UpcomingActivity" />
         <activity android:name=".NowPlayActivity" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settings.SettingsActivity"
             android:label="Settings"
             android:parentActivityName=".MainActivity"
             android:theme="@style/SettingsTheme">
@@ -70,7 +70,7 @@
 
         <activity android:name=".FavouriteActivity" />
 
-        <receiver android:name=".FavouriteAf">
+        <receiver android:name=".widget.FavouriteAf">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -80,7 +80,7 @@
                 android:resource="@xml/favourite_af_info" />
         </receiver>
 
-        <service android:name=".StackWidgetService"
+        <service android:name=".widget.StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS">
 
         </service>
